# i3wm-gtk4

./: .gitignore  .gitmodules  BUG.md  Cargo.toml  Dockerfile  Dockerfile.i3  Dockerfile.whisper-cuda  README.md  docker-compose.yaml  justfile  prompt.md
.devcontainer/: devcontainer.json
assets/: control-panel.css  i3more-speech-text-ui.desktop  launcher.css  lock-screen.css  menu.css  notification.css  popup-translate.css  power.css  speech-text-ui.css  style.css  translate.css
docs/: architecture.md  build.md  design.md  existing-infrastructure.md  git-quick-help.md  learning-plan.md  setup.md
docs/claudei/: README.md  container-rust-phases.md  docker-kernel-mapping.md
docs/linux-kernel/: README.md  dbus-architecture.mmd  dbus-rust-phases.md  glossary.md  i3more-usage.md  kernel-6.14.md
docs/plan/: 01-workspace.md  02-system-tray.md  03-common-info.md  04-util-translation.md  05-desktop-notification.md  06-util-cp-audio.md  07-util-cp-power.md  08-util-workspace.md  09-util-cp-brightness.md  10-util-appsearch.md  11-logs.md  12-util-cp-change-background.md  bash-to-exec.md  control-panel.md  dynamicWM.md  login-lock.md  production-build-i3.md  production-build.md  speech-text-streaming.mdd  speech-text.md  wayland-support.md  xwayland.md
docs/reference/: nvidia-container-toolkit.md
examples/: epoll_basics.rs
linbus/: Cargo.toml
linbus/examples/: hello_bus.rs  test_dead_bus.rs
linbus/src/: auth.rs  bus.rs  conn.rs  dispatch.rs  error.rs  fd_pass.rs  lib.rs  marshal.rs  message.rs  proxy.rs  signature.rs  unmarshal.rs  value.rs
linbus/tests/: integration.rs
reference/: docker-workspace
scripts/: claudei.sh
src/: audio_main.rs  auto_unmax.rs  back_main.rs  css.rs  fa.rs  icon.rs  ipc.rs  keyhint_main.rs  launcher.rs  launcher_main.rs  layout_cmd.rs  layout_indicator.rs  layout_main.rs  lib.rs  lock_main.rs  main.rs  mic_indicator.rs  model.rs  mru.rs  navigator.rs  popup_translate_main.rs  power_main.rs  power_profile_main.rs  sequencer.rs  speech_text.rs  speech_text_main.rs  speech_text_ui_main.rs  sysinfo.rs  translate.rs  translate_main.rs  whisper_stt_indicator.rs  window_main.rs  workspace_main.rs
src/control_panel/: mod.rs  panel.rs
src/control_panel/widgets/: background.rs  backlight.rs  mod.rs  speech_text.rs  volume.rs
src/lock/: auth.rs  config.rs  mod.rs  security.rs  ui.rs  x11.rs
src/notify/: daemon.rs  dnd.rs  history.rs  mod.rs  panel.rs  popup.rs  render.rs  types.rs
src/speech_text/: capture.rs  parec.rs  pipewire.rs  vad.rs
src/tray/: dbusmenu.rs  item.rs  mod.rs  render.rs  types.rs  watcher.rs
tests/: docker-lock-test.sh
