[package]
name = "i3more"
version = "0.1.0"
edition = "2021"
description = "An extension layer for i3 window manager with visual workspace navigation"

[[bin]]
name = "i3more"
path = "src/main.rs"

[[bin]]
name = "i3more-translate"
path = "src/translate_main.rs"

[[bin]]
name = "i3more-audio"
path = "src/audio_main.rs"

[[bin]]
name = "i3more-launcher"
path = "src/launcher_main.rs"

[[bin]]
name = "i3more-workspace"
path = "src/workspace_main.rs"

[[bin]]
name = "i3more-lock"
path = "src/lock_main.rs"
required-features = ["lock"]

[[bin]]
name = "i3more-popup-translate"
path = "src/popup_translate_main.rs"

[[bin]]
name = "i3more-power"
path = "src/power_main.rs"

[[bin]]
name = "i3more-power-profile"
path = "src/power_profile_main.rs"

[[bin]]
name = "i3more-keyhint"
path = "src/keyhint_main.rs"

[[bin]]
name = "i3more-window"
path = "src/window_main.rs"

[[bin]]
name = "i3more-speech-text"
path = "src/speech_text_main.rs"
required-features = ["speech-text"]

[dependencies]
gtk4 = "0.10"
gdk4-x11 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lru = "0.12"
dirs = "6"
zbus = "5"
async-io = "2"
futures-util = "0.3"
log = "0.4"
env_logger = "0.11"
x11rb = { version = "0.13", features = ["randr"] }
zeroize = { version = "1", features = ["derive"] }
nix = { version = "0.29", features = ["process", "signal"] }
pam-client = { version = "0.5", optional = true }
libc = "0.2"
whisper-rs = { version = "0.14", default-features = false, features = ["cuda"], optional = true }
pipewire = { version = "0.9", features = ["v0_3_77"], optional = true }

[features]
# Default feature set is empty so `cargo build` in either container
# produces only the binaries the container can actually link.
#
# - `cargo build --bin i3more` (dev container, no GPU/CUDA) just works.
# - `cargo build --bin i3more-lock --features lock` (dev container) opts
#   the pam-sys + libclang chain in.
# - `cargo build --bin i3more-speech-text --features speech-text`
#   (whisper-build container) opts whisper-rs + pipewire in.
# - `cargo build --release --features lock,speech-text` builds everything
#   (only sane in the whisper-build container).
default = []
lock = ["dep:pam-client"]
speech-text = ["dep:whisper-rs", "dep:pipewire"]
